Remove unwanted text caret in 'URL' text filed of "Edit" bookmark overlay

The |cursor_view| in Textfield uses the default construction of view, 
where the cursor is always initialized as visible. It was showing in some 
default location before landing fix of bug crbug.com/734988. It now shows 
in the beginning of the Textfield instead. As a result, an unwanted text 
cursor is displayed to users. In this change, after calling  
UpdateCursorViewLocation, UpdateCursorVisibility is added to adjust the 
visibility.  

Bug: 739607
Change-Id: I3243857173c9c30cb0da11eae31f030e26771bd7
Reviewed-on: https://chromium-review.googlesource.com/564019
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Yi Xu <yiyix@chromium.org>
Cr-Commit-Position: refs/heads/master@{#485983}
Former-commit-id: 528b5d650eba7b4ded686622888a20d4e0a27b1b